java-design-patterns-03/src/main/java/com/farhad/example/refactoring/consolidate_conditional_expression/bad/Order.java
package com.farhad.example.refactoring.consolidate_conditional_expression.bad;

import lombok.Data;

@Data
public class Order {

	private OrderStatus orderStatus;
	private PaymentStatus paymentStatus;
	private boolean customerSatisfied;

}
